crates/dag-macros/tests/ui/workflow_timeout_invalid_key.stderr
error: timeout! requires `ms = <integer>`
  --> tests/ui/workflow_timeout_invalid_key.rs:36:31
   |
36 |     timeout!(trigger -> sink, secs = 1);
   |                               ^^^^
